# HarvestMate

./: README.md
sourceCode/: README.md
sourceCode/sdp_ws/src/: README.md
sourceCode/sdp_ws/src/camera/: README.md  calc.py  cam3.py  cam_p.py  package.xml  setup.py
sourceCode/sdp_ws/src/camera/camera/: README.md  config.py  functions.py
sourceCode/sdp_ws/src/classification/: package.xml  setup.py
sourceCode/sdp_ws/src/classification/classification/: README.md  classify.py  classify_coral.py  labels.txt  modelC.tflite
sourceCode/sdp_ws/src/classification/classification/modelC/: fingerprint.pb  keras_metadata.pb  (+1 more)
sourceCode/sdp_ws/src/communication/: package.xml  setup.py
sourceCode/sdp_ws/src/communication/communication/: README.md  serial2.py
sourceCode/sdp_ws/src/custom_msgs/: CMakeLists.txt  README.md  package.xml
sourceCode/sdp_ws/src/custom_msgs/msg/: IkResult.msg  PointDictionary.msg  PointFiveElements.msg
sourceCode/sdp_ws/src/motion_control/: package.xml  setup.py
sourceCode/sdp_ws/src/motion_control/motion_control/: README.md  iknew.py
sourceCode/sdp_ws/src/robot_description/: README.md  package.xml  setup.py
sourceCode/sdp_ws/src/robot_description/urdf/: braccio.urdf
sourceCode/sdp_ws/src/transform/: package.xml  setup.cfg  setup.py
sourceCode/sdp_ws/src/transform/launch/: all_system_launch.py  tf_launch.py
sourceCode/sdp_ws/src/transform/transform/: CheckIndividual.py  README.md  SearchIfReachable2.py  reachability_matrix1.json  reachability_matrix2.json  reachability_matrix3.json  transformc.py
sourceCode/serial/: serial.ino
(+1 files in other folders)
